# AI-Suite-Equalizer

./: .gitignore  CMakeLists.txt  README.md
Source/: PluginEditor.cpp  PluginEditor.h
Source/UI/: DBMeter.cpp  DBMeter.h  FilterControlPanel.cpp  FilterNode.cpp  FrequencyResponseCurve.cpp  ModernLookAndFeel.cpp  ParameterTooltip.cpp
